<resources>
    <string name="app_name">峽谷外送員</string>
    <!--    註冊畫面資料-->
    <string name="signUp_title">註冊身分</string>
    <string name="hint_nameInput">姓名：</string>
    <string name="hint_eMailInput">電子信箱：</string>
    <string name="hint_phone">電話號碼：</string>
    <string name="hint_pswdInput">密碼：</string>
    <string name="hint_pswd2Input">確認密碼：</string>
    <string name="hint_telInput">電話：</string>
    <string name="hint_addressInput">地址：</string>
    <string name="button_signUp">註冊</string>
    <string name="log_in">登入</string>
    <string name="sign_up">註冊</string>
    <string name="cancel">取消</string>
    <string name="title_activity_skhomepage">SKHomepage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="SKshopName">築間幸福鍋物 台中逢甲店</string>
    <string name="SKphone">04-24511313</string>
    <string name="SKaddress">407台中市西屯區逢甲路173號</string>
    <string name="SKtimeMon">星期一 11:00 - 04:00</string>
    <string name="SKtimeTue">星期二 11:00 - 04:00</string>
    <string name="SKtimeWed">星期三 11:00 - 04:00</string>
    <string name="SKtimeThur">星期四 11:00 - 04:00</string>
    <string name="SKtimeFri">星期五 11:00 - 04:00</string>
    <string name="SKtimeSat">星期六 11:00 - 04:00</string>
    <string name="SKtimeSun">星期日 11:00 - 04:00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>