<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MainTheme_color"
    tools:context=".UserRegisterActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:onClick="goBack"
        android:scaleType="fitStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />

    <TextView
        android:id="@+id/tv_registAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="註冊身分"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_registAccount" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.257">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_nameInput"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etx_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_eMailInput"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etx_name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_name3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_pswdInput"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etx_name3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_name4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_pswd2Input"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etx_name4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_name5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_telInput"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etx_name5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_name6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_addressInput"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etx_name6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_regist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/button_signUp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>